--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
 node_modules
 backend/node_modules
+backend/API-TESTING-SUMMARY.md
+backend/LOGIN-CREDENTIALS.md
+backend/POSTMAN-IMPORT-INSTRUCTIONS.md
+backend/TESTING-GUIDE.md
+
